bugId::9005 and bugId::8875 fixing some layout issues
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@39866 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/AdminDashboard/css/AdminDashboard.scss
+++ b/extensions/wikia/AdminDashboard/css/AdminDashboard.scss
@@ -322,3 +322,8 @@ $base-z: 5;
 .WikiaArticle .lu_fieldset {
 	white-space: normal;
 }
+
+/* Upload overwrite */
+#wpUploadDescription {
+	width: 100%;
+}
